--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "^4.1.2",
     "karma": "^1.7.1",
     "mocha": "^3.5.0",
+    "sinon": "^3.2.1",
     "ts-node": "^3.3.0",
     "typings": "^2.1.1"
   },
