--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
-    "expose-loader": "^0.7.3",
-    "webpack": "^3.6.0",
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.42",
     "chai": "^4.1.2",
     "codelyzer": "^3.1.2",
+    "expose-loader": "^0.7.3",
     "karma": "^1.7.1",
     "mocha": "^3.5.0",
-    "sinon": "^3.2.1",
     "ts-node": "^3.3.0",
-    "typings": "^2.1.1"
+    "typings": "^2.1.1",
+    "webpack": "^3.6.0"
   },
   "scripts": {
     "test": "mocha -r ts-node/register ./tests/**/*.tests.ts",
