--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/mocha": "^2.2.42",
     "chai": "^4.1.2",
     "codelyzer": "^3.1.2",
+    "del": "^3.0.0",
     "expose-loader": "^0.7.3",
+    "gulp-uglify": "^3.0.0",
     "karma": "^1.7.1",
     "mocha": "^3.5.0",
     "ts-node": "^3.3.0",
     "typings": "^2.1.1",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-stream": "^4.0.0"
   },
   "scripts": {
     "test": "mocha -r ts-node/register ./tests/**/*.tests.ts",
