--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "logging framework",
   "main": "main.js",
-  "dependencies": {
-    "file-system": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^3.2.2",
-    "path": "^0.12.7",
-    "typescript": "^2.5.2",
-    "vinyl-source-stream": "^1.1.0"
+  "dependencies": {   
+   
   },
   "devDependencies": {
+    "typescript": "^2.5.2",
+    "vinyl-source-stream": "^1.1.0",
+    "gulp-typescript": "^3.2.2",
+    "file-system": "^2.2.2",
+    "gulp": "^3.9.1",
+    "path": "^0.12.7",
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.42",
     "chai": "^4.1.2",
