--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,18 @@
 # shared 
 environment:
   version: 1.0.0
+  nodejs_version: "8"
+
+install:
+  - ps: Install-Product node $env:nodejs_version
+  - npm install
 
 skip_tags: true
 
 build: off
 
 build_script:
-  - ps: npm install
-  - ps: npm test
+  - npm test
 
 for:
   -
