Adds typings back to project

--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "version": "1.0.0",
   "description": "logging framework",
   "main": "main.js",
-  "dependencies": {   
-   
-  },
+  "dependencies": {},
   "devDependencies": {
-    "typescript": "^2.5.2",
-    "vinyl-source-stream": "^1.1.0",
-    "gulp-typescript": "^3.2.2",
-    "file-system": "^2.2.2",
-    "gulp": "^3.9.1",
-    "path": "^0.12.7",
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.42",
     "chai": "^4.1.2",
     "codelyzer": "^3.1.2",
     "del": "^3.0.0",
     "expose-loader": "^0.7.3",
+    "file-system": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.2",
     "gulp-uglify": "^3.0.0",
     "karma": "^1.7.1",
     "mocha": "^3.5.0",
+    "path": "^0.12.7",
     "ts-node": "^3.3.0",
+    "typescript": "^2.5.2",
+    "typings": "^2.1.1",
+    "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.6.0",
     "webpack-stream": "^4.0.0"
   },
