--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
-  - typings install
+  - ps: typings install
 
 skip_tags: true
 
