--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "webpack-stream": "^4.0.0"
   },
   "scripts": {
-    "test": "mocha --reporter mocha-appveyor-reporter -r ts-node/register ./tests/**/*.tests.ts",
+    "test": "mocha -r ts-node/register ./tests/**/*.tests.ts",
     "gulp": "gulp",
     "lint": "npm run tslint \"src/**/*.ts\"",
     "tslint": "tslint",
