--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,17 +4,15 @@ environment:
   nodejs_version: "8"
 
 install:
-  - ps: Install-Product node $env:nodejs_version
-  - npm install
-  - npm i -g typings
-  - ps: typings install
+  - ps: Install-Product node $env:nodejs_version  
+  - npm i -g typings  
 
 skip_tags: true
 
 build: off
 
 build_script:
-  - npm test -- --reporter mocha-appveyor-reporter
+  - npm run ci:appveyor
 
 for:
   -
