get version from package

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,11 @@
 # shared 
 environment:
-  version: 1.0.0
+  version: (Get-Content -Raw -Path package.json | ConvertFrom-Json).version
   nodejs_version: "8"
 
 install:
   - ps: Install-Product node $env:nodejs_version  
+  - ps: '"//registry.npmjs.org/:_authToken=$env:npm_auth_token`n" | out-file "$env:userprofile\.npmrc" -Encoding ASCII'
   - npm i -g typings  
 
 skip_tags: true
@@ -41,4 +42,5 @@ for:
     version: $(version).{build}-{branch}
   
     on_failure:
-      - ps: Update-AppveyorBuild -Version "$($env:appveyor_build_version)-$(Get-Date -format HHmmss)-failed"    
+      - ps: Update-AppveyorBuild -Version "$($env:appveyor_build_version)-$(Get-Date -format HHmmss)-failed"
+      - npm publish    
