--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
 # shared 
 environment:
-  version: 1
+  version: 0.0.0
   nodejs_version: "8"
 
 install:
-  - ps: $env:version=(Get-Content -Raw -Path package.json | ConvertFrom-Json).version
+  - ps: Update-AppveyorBuild -Version "$((Get-Content -Raw -Path package.json | ConvertFrom-Json).version)"    
   - ps: Install-Product node $env:nodejs_version  
   - ps: '"//registry.npmjs.org/:_authToken=$env:npm_auth_token`n" | out-file "$env:userprofile\.npmrc" -Encoding ASCII'
   - npm i -g typings  
