--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   nodejs_version: "8"
 
 install:
-  - ps: Update-AppveyorBuild -Version "$((Get-Content -Raw -Path package.json | ConvertFrom-Json).version)"    
+  - ps: $env:version="$((Get-Content -Raw -Path package.json | ConvertFrom-Json).version)"
   - ps: Install-Product node $env:nodejs_version  
   - ps: '"//registry.npmjs.org/:_authToken=$env:npm_auth_token`n" | out-file "$env:userprofile\.npmrc" -Encoding ASCII'
   - npm i -g typings  
