--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,4 +41,10 @@ for:
       - ps: git config --global user.name "$($env:Git_Username)"
       - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:Git_Username):$($env:Git_Password)@github.com`n"
       - ps: git tag $($env:appveyor_build_version) $($env:APPVEYOR_REPO_COMMIT)
-      - git push --tags
+      - git push --tags    
+  
+  -
+    branches:
+      except:
+        - master
+  
