--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,13 +7,8 @@ install:
   - ps: Install-Product node $env:nodejs_version  
   - ps: '"//registry.npmjs.org/:_authToken=$env:npm_auth_token`n" | out-file "$env:userprofile\.npmrc" -Encoding ASCII'
   - npm i -g typings  
-  - ps: >- 
-      if("$($env:APPVEYOR_REPO_BRANCH)" == "master")
-      {
-        Update-AppveyorBuild -Version "$($env:version).$($env:APPVEYOR_BUILD_NUMBER)-$($env:APPVEYOR_REPO_BRANCH)"
-      } else {
-        Update-AppveyorBuild -Version "$($env:version)"
-      }
+  - ps: $version = $env:APPVEYOR_REPO_BRANCH == "master" ?  "$($env:version).$($env:APPVEYOR_BUILD_NUMBER)-$($env:APPVEYOR_REPO_BRANCH)" :  "$($env:version)"
+  - ps: Update-AppveyorBuild -Version "$($version)"
 
 skip_tags: true
 
