--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^3.2.2",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "karma": "^1.7.1",
     "mocha": "^3.5.0",
     "mocha-appveyor-reporter": "^0.4.0",
