--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ environment:
 
 install:
   - ps: $env:version="$((Get-Content -Raw -Path package.json | ConvertFrom-Json).version)"
+  - ps: Update-AppveyorBuild -Version "$($env:version)"   
   - ps: Install-Product node $env:nodejs_version  
   - ps: '"//registry.npmjs.org/:_authToken=$env:npm_auth_token`n" | out-file "$env:userprofile\.npmrc" -Encoding ASCII'
   - npm i -g typings  
@@ -14,24 +15,22 @@ build: off
 
 test: off
 
-build_script:
+build_script: 
   - npm run ci:appveyor
+
+on_success:
+  - npm publish
 
 for:
   -
     branches:
       only:
         - master
-    
-    before_build: 
-      - ps: Update-AppveyorBuild -Version "$($env:version)"    
 
     on_failure:
       - ps: Update-AppveyorBuild -Version "$($env:appveyor_build_version)-$(Get-Date -format HHmmss)-failed"    
       
     on_success:
-      - ps: Update-AppveyorBuild -Version "$($env:version)"  
-      - npm publish  
       - ps: git config --global credential.helper store
       - ps: git config --global user.email "$($env:Git_Email)"
       - ps: git config --global user.name "$($env:Git_Username)"
@@ -45,7 +44,5 @@ for:
         - master
 
     before_build: 
-      - ps: Update-AppveyorBuild -Version "$($env:version).$($env:APPVEYOR_BUILD_NUMBER)-$($env:APPVEYOR_REPO_BRANCH)"
-    
-    on_success:
-      - npm publish --tag next
+      - ps: $env:version="$($env:version).$($env:APPVEYOR_BUILD_NUMBER)-$($env:APPVEYOR_REPO_BRANCH)"
+      - ps: Update-AppveyorBuild -Version "$($env:version)"
